# marshal

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
derive/: Cargo.toml
derive/src/: lib.rs
examples/: add-test.rs  advanced-event.json  advanced.json  basic.json  event.json  pii-strip.rs
sentry_stripping_derive/: Cargo.toml
sentry_stripping_derive/src/: lib.rs
src/: builtinrules.rs  chunk.rs  common.rs  detectors.rs  forward.rs  lib.rs  macros.rs  meta.rs  meta_ser.rs  processor.rs  protocol.rs  rule.rs  ruleconfig.rs  tests.rs  tracked.rs  unexpected.rs  utils.rs  value.rs
src/processor/: builtin.rs  chunk.rs  chunks.rs  mod.rs  pii.rs  processor.rs  rule.rs
src/protocol/: buffer.rs  common.rs  macros.rs  meta.rs  meta_ser.rs  mod.rs  serde.rs  serde_chrono.rs  tracked.rs  types.rs  utils.rs
src/tests/: mod.rs  test_annotated.rs  test_builtinrules.rs  test_chunking.rs  test_common.rs  test_meta.rs  test_processor.rs  test_protocol.rs  test_rules.rs  test_serde_chrono.rs
tests/: common.rs  payloads.rs  unit.rs
tests/normalize/: cocoa.json  dotnet.json  legacy_js_exception.json  legacy_node_exception.json  legacy_node_express.json  legacy_node_onerror.json  legacy_node_promise.json  legacy_python.json  swift.json
tests/payloads/: cocoa.json  dotnet.json  electron_main.json  electron_renderer.json  legacy_swift.json
tests/payloads/normalize/: legacy_js_onerror.json  legacy_python.json  legacy_swift.json
tests/payloads/strip/: cocoa.json  electron_renderer.json  legacy_node_message.json
tests/strip/: cordova.json  dotnet.json  electron_main.json  electron_renderer.json  legacy_js_message.json  legacy_js_promise.json
tests/unit/redact_pair_deletes_already_processed_value/: config.json  event.json
tests/unit/redact_pair_is_not_undone_by_other_rule/: config.json  expected.json
tests/unit/strip_headers_by_name/: config.json  event.json  expected.json
