[package]
name = "sentry-stripping"
version = "0.1.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]

[dependencies]
chrono = "0.4.2"
regex = "1.0.1"
serde = "1.0.69"
serde_derive = "1.0.69"
serde_json = "1.0.22"
uuid = { version = "0.6.5", features = ["v4", "serde"] }
sentry_stripping_derive = { path = "sentry_stripping_derive" }
failure = "0.1.1"
failure_derive = "0.1.1"
lazy_static = "1.0.1"
sha2 = "0.7.1"
hmac = "0.6.2"
sha-1 = "0.7.0"

[dev-dependencies]
difference = "2.0.0"

[patch.crates-io]
#serde = { path = "../serde/serde" }
#serde_derive = { path = "../serde/serde_derive" }
serde = { git = "https://github.com/mitsuhiko/serde", rev = "e4eb33057e193e69e09cdc97074536486780c33d" }
serde_derive = { git = "https://github.com/mitsuhiko/serde", rev = "e4eb33057e193e69e09cdc97074536486780c33d" }
