[package]
name = "marshal"
version = "0.1.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]

[dependencies]
chrono = "0.4.2"
debugid = { version = "0.2.0", features = ["with_serde"] }
regex = "1.0.1"
serde = "1.0.69"
serde_derive = "1.0.69"
serde_json = "1.0.22"
uuid = { version = "0.6.5", features = ["v4", "serde"] }
marshal_derive = { path = "derive" }
failure = "0.1.1"
failure_derive = "0.1.1"
lazy_static = "1.0.1"
sha2 = "0.7.1"
hmac = "0.6.2"
sha-1 = "0.7.0"

[dev-dependencies]
console = "0.6.1"
dialoguer = "0.1.0"
difference = "2.0.0"

[patch.crates-io]
serde = { git = "https://github.com/mitsuhiko/serde", rev = "880a8c0181ad7202950f24cc8f6872994913441d" }
serde_derive = { git = "https://github.com/mitsuhiko/serde", rev = "880a8c0181ad7202950f24cc8f6872994913441d" }
